Handling header dependencies

--- a/Rasp/Makefile
+++ b/Rasp/Makefile
@@ -7,14 +7,18 @@ EXEC = rasp
 SOURCES = $(wildcard *.cpp)
 OBJECTS = $(SOURCES:.cpp=.o)
 
-# Main target
+all: $(EXEC)
+
+clean:
+	rm -f $(EXEC) $(OBJECTS)
+
 $(EXEC): $(OBJECTS)
 	$(CC) $(OBJECTS) -o $(EXEC)
 
-# To obtain object files
 %.o: %.cpp
 	$(CC) -c $(CC_FLAGS) $< -o $@
 
-# To remove generated files
-clean:
-	rm -f $(EXEC) $(OBJECTS)
+DEPS := $(OBJECTS:.o=.d)
+
+-include $(DEPS)
+
